--- a/testing.html
+++ b/testing.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TESTING CSS</title>
+    <link rel="shortcut icon" href="./assets/navidad/3.svg" type="image/x-icon">
     <link rel="stylesheet" href="./cards.css">
     <link rel="stylesheet" href="./gatito.css">
     <link rel="stylesheet" href="./pajarito.css">
+    <link rel="stylesheet" href="./plantas.css">
+    <link rel="stylesheet" href="./navidad.css">
     <style>
         body {
             margin: 0;
@@ -47,15 +50,71 @@
             <img class="img_gatito" src="./assets/gatitorosa.svg" alt="" srcset="">
         </div>
     </section>
-    
+
     <section class="pajarito-section">
         <div class="pajarito-container">
             <img class="img-pajarito" src="./assets/pajarito.svg" alt="" srcset="">
         </div>
     </section>
 
+    <section class="plants-section">
+        <!-- <div class="plantarosa-container">
+            <img class="img-plantarosa" src="./assets/hojaclara.svg" alt="" srcset="">
+        </div> -->
+        <div class="flor-container">
+            <img class="img-flor" src="./assets/flor.svg" alt="" srcset="">
+        </div>
+        <div class="plantaverde-container">
+            <img class="img-plantaverde" src="./assets/hojaverde.svg" alt="" srcset="">
+        </div>
+    </section>
 
-    <!-- Transform rotate, scale, skew y matrix -->
+    <section class="navidad-section">
+        <div class="navidad-container1 ">
+            <img class="img-navidad1" src="./assets/navidad/1.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container2 ">
+            <img class="img-navidad2" src="./assets/navidad/2.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container3 ">
+            <img class="img-navidad3" src="./assets/navidad/3.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container1 ">
+            <img class="img-navidad1" src="./assets/navidad/1.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container2 ">
+            <img class="img-navidad2" src="./assets/navidad/2.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container3 ">
+            <img class="img-navidad3" src="./assets/navidad/3.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container1 ">
+            <img class="img-navidad1" src="./assets/navidad/1.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container2 ">
+            <img class="img-navidad2" src="./assets/navidad/2.svg" alt="" srcset="">
+        </div>
+        <div class="navidad-container3 ">
+            <img class="img-navidad3" src="./assets/navidad/3.svg" alt="" srcset="">
+        </div>
+    </section>
+    <!-- Retomar en clase Backface visibility -->
+
+
+    <!-- PROP TRANSFORM: -->
+    <!-- scale(): cambiar tamaño. 1 es neutro (1.2 es mas grande) -->
+    <!-- skew(): estirar oblicuo -->
+    <!-- rotate(): girar. Ángulos -->
+    <!-- matrix(): varios comportamientos. muchos parámetros -->
+
+    <!-- transform-style: 2D o 3D -->
+    <!-- perspective: da profundidad -->
+    <!-- perspective-origin: modifica el punto desde donde estamos viendo la imagen-->
+    <!-- POSITION RELATIVE: Elemento Padre -->
+    <!-- POSITION ABSOLUTE: Elemento Hijo -->
+
+
+
 </body>
 
 </html>
