--- a/testing.html
+++ b/testing.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./pajarito.css">
     <link rel="stylesheet" href="./plantas.css">
     <link rel="stylesheet" href="./navidad.css">
+    <link rel="stylesheet" href="./parallax.css">
     <style>
         body {
             margin: 0;
@@ -113,7 +114,7 @@
     <!-- POSITION RELATIVE: Elemento Padre -->
     <!-- POSITION ABSOLUTE: Elemento Hijo -->
 
-
+   
 
 </body>
 
