--- a/testing.html
+++ b/testing.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./pajarito.css">
     <link rel="stylesheet" href="./plantas.css">
     <link rel="stylesheet" href="./navidad.css">
-    <link rel="stylesheet" href="./parallax.css">
+    <link rel="stylesheet" href="./bolitas.css">
     <style>
         body {
             margin: 0;
@@ -114,7 +114,27 @@
     <!-- POSITION RELATIVE: Elemento Padre -->
     <!-- POSITION ABSOLUTE: Elemento Hijo -->
 
-   
+    <section class="section-bolitas">
+        <div class="bolitas-container">
+            <div class="bolita base-roja">
+                <img src="./assets/folk/23.png" alt="" srcset="">
+            </div>
+            <div class="bolita corazon-claro">
+                <img src="./assets/folk/24.png" alt="" srcset="">
+            </div>
+            <div class="bolita corazon-marron">
+                <img src="./assets/folk/21.png" alt="" srcset="">
+            </div>
+            <div class="bolita puntitos">
+                <img src="./assets/folk/22.png" alt="" srcset="">
+            </div>
+            <div class="bolita manito">
+                <img src="./assets/folk/25.png" alt="" srcset="">
+            </div>
+
+        </div>
+    </section>
+
 
 </body>
 
